Properly set access type if we doIncludeCompletion.

This should fix issues where unrelated include items where shown
when we returned early from the doIncludeCompletion function.

BUG: 310391